--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
   - docker build -t crusenov/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true crusenov/docker-react npm run test
+  - docker run crusenov/docker-react npm run test -- --coverage
