--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,16 @@ before_install:
   - docker build -t crusenov/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run crusenov/docker-react npm run test -- --coverage
+  - docker run -e CI=true USERNAME/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-west-2-Id"
+  bucket_path: "docker-react"
+  on: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
